[package]
name = "connectfour"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
numworks_utils = { path = "../numworks_utils", version = "*" }

[build-dependencies]
nppm_decoder = { path = "../nppm_decoder", version = "*" }
