[package]
name = "solitaire"
version = "1.0.0"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
numworks_utils = { path = "../numworks_utils", version = "*" }

[build-dependencies]
nppm_decoder = { path = "../nppm_decoder", version = "*" }
